      http://amarok.kde.org/wiki/MySQL_Server.
    * GHNS integration for downloading and installing Context applets.
    * Support for Context applets to be written in QtScript.
    * Custom Dynamic Playlists using Last.fm.
    * Drag and Drop support for album cover image. (BR 91261)
    * Upcoming and previous tracks count for dynamic playlist is now
      configurable. (BR 177540)

  CHANGES:
    * The "Service Info" applet is now simply called "Info" to reflect that
      it now shows info from other parts of Amarok as well.
    * Remove the bookmark manager context applet and add a bookmark manager
      dialog instead.
    * Magnatune.com store: Add a link to purchase gift cards to the purhcase 
      dialog.
    * Reset playlist filter when using the "replace playlist" action. Patch 
      by John Atkinson <john@fauxnetic.co.uk> (BR 200709)
    * Track lyrics are exposed through the DBUS interface.
    * The database connection and tables now enforce UTF-8 for the character
      set and collation.
    * The OSD registers itself as a notification window type on relevant
      platforms. Patch thanks to Danny Baumann <dannybaumann@web.de>.
      (BR 194517)
    * Improvements to the Wikipedia applet. History, language settings
      and more.
    * Improvements to the Current applet. Text slides on mouse hover.
    * New navigation style in the browser sidebar.
    * Improvements to the Albums applet. Show individual track times and
      highlight currently playing artist within compilation albums
    * Removed PlayAudioCD from the scripting interface. It never worked
      anyway, and audio CDs are just treated as a collection and not a
      special case like they were in 1.4.
    * Changed trackInserted and trackRemoved API signals. (BR 194220)

  BUGFIXES:
    * Fixed some album art in a folder not getting picked up if a subfolder
      contained any files. (BR 167158)
    * Fixed broken selection in the "Saved Playlists" category.