@@ -69,6 +69,8 @@ VERSION 2.2-beta1
       configurable. (BR 177540)
 
   CHANGES:
+    * Hueristics when deciding which album to use in a directory. See comments
+      in (BR 196559)
     * The "Service Info" applet is now simply called "Info" to reflect that
       it now shows info from other parts of Amarok as well.
     * Remove the bookmark manager context applet and add a bookmark manager
